--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,800&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -77,7 +77,7 @@
                 height="300"
               />
               <h2 class="title">Banking App Interface Concept</h2>
-              <p class="title-text">App</p></a
+              <p class="text">App</p></a
             >
           </li>
           <li>
@@ -89,7 +89,7 @@
                 height="300"
               />
               <h2 class="title">Cashless Payment</h2>
-              <p class="title-text">Marketing</p></a
+              <p class="text">Marketing</p></a
             >
           </li>
           <li>
@@ -101,7 +101,7 @@
                 height="300"
               />
               <h2 class="title">Meditation App</h2>
-              <p class="title-text">App</p></a
+              <p class="text">App</p></a
             >
           </li>
           <li>
@@ -113,7 +113,7 @@
                 height="300"
               />
               <h2 class="title">Taxi Service</h2>
-              <p class="title-text">Marketing</p></a
+              <p class="text">Marketing</p></a
             >
           </li>
           <li>
@@ -125,7 +125,7 @@
                 height="300"
               />
               <h2 class="title">Screen Illustrations</h2>
-              <p class="title-text">Design</p></a
+              <p class="text">Design</p></a
             >
           </li>
           <li>
@@ -137,7 +137,7 @@
                 height="300"
               />
               <h2 class="title">Online Courses</h2>
-              <p class="title-text">Marketing</p></a
+              <p class="text">Marketing</p></a
             >
           </li>
           <li>
@@ -150,7 +150,7 @@
                 height="300"
               />
               <h2 class="title">Instagram Stories Concept</h2>
-              <p class="title-text">Design</p></a
+              <p class="text">Design</p></a
             >
           </li>
           <li>
@@ -162,7 +162,7 @@
                 height="300"
               />
               <h2 class="title">Organic Food</h2>
-              <p class="title-text">Web Site</p></a
+              <p class="text">Web Site</p></a
             >
           </li>
           <li>
@@ -174,7 +174,7 @@
                 height="300"
               />
               <h2 class="title">Fresh Coffee</h2>
-              <p class="title-text">Web Site</p></a
+              <p class="text">Web Site</p></a
             >
           </li>
         </ul>
