--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,800&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -62,28 +62,28 @@
         <ul class="list">
           <li>
             <h3 class="title">Strategy</h3>
-            <p class="title-text">
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3 class="title">Punctuality</h3>
-            <p class="title-text">
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3 class="title">Diligence</h3>
-            <p class="title-text">
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="title">Technologies</h3>
-            <p class="title-text">
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -97,24 +97,24 @@
             <img
               src="./images/img_1.jpg"
               alt="Desktop"
-              width="360"
-              height="360"
+              width="264"
+              height="260"
             />
           </li>
           <li>
             <img
               src="./images/img_2.jpg"
               alt="Differen pages"
-              width="360"
-              height="360"
+              width="264"
+              height="260"
             />
           </li>
           <li>
             <img
               src="./images/img_3.jpg"
               alt="Phone main page"
-              width="360"
-              height="360"
+              width="264"
+              height="260"
             />
           </li>
         </ul>
@@ -127,7 +127,7 @@
               src="./images/mark_guerrero.jpg"
               alt="Mark Guerrero Product Designer"
               width="264"
-              height="380"
+              height="260"
             />
             <h3 class="team">Mark Guerrero</h3>
             <p class="rank">Product Designer</p>
@@ -137,7 +137,7 @@
               src="./images/tom_ford.jpg"
               alt="Tom Ford Frontend Developer"
               width="264"
-              height="380"
+              height="260"
             />
             <h3 class="team">Tom Ford</h3>
             <p class="rank">Frontend Developer</p>
@@ -147,7 +147,7 @@
               src="./images/camila_garcia.jpg"
               alt="Camila Garcia Marketing"
               width="264"
-              height="380"
+              height="260"
             />
             <h3 class="team">Camila Garcia</h3>
             <p class="rank">Marketing</p>
@@ -157,7 +157,7 @@
               src="./images/daniel_wilson.jpg"
               alt="Daniel Wilson UI Designer"
               width="264"
-              height="380"
+              height="260"
             />
             <h3 class="team">Daniel Wilson</h3>
             <p class="rank">UI Designer</p>
